--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <div class="container">
             <div class="books-container auto-grid">
-                
+                <a href="https://github.com/ziizoor/ebook/index.html">Ebook</a>
             </div>
         </div>
         <footer>
             <div class="footer-container">
-                <p data-content="doc.footer.made">Make with  by Bitorres</p>
+                <p data-content="doc.footer.made">Make with &#9829; by Bitorres</p>
             </div>
         </footer>
         <script src="./assets/js/app.js"></script>
